# phoenix-multiversx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: actions.yml  artifacts-dev.yml  pre-release.yml  release.yml
common/modules/staking-bank-static-module/: Cargo.toml
examples/umbrella-example/: Cargo.toml  package-lock.json  package.json
examples/umbrella-example/meta/: Cargo.toml
generate-signature/: index.js  package-lock.json  package.json
interact/: customEnvChain.js  data.json  index.ts  signature.ts  timelock.ts  types.ts  utils.ts
interact/actions/: helpers.ts  timelockActions.ts
registry/: .gitignore  Cargo.toml
registry/meta/: Cargo.toml
registry/output/: registry.abi.json
registry/src/: lib.rs
registry/tests/: registry_test.rs
registry/wasm/: Cargo.toml
staking-bank-static/staking-bank-static-dev/: Cargo.toml
staking-bank-static/staking-bank-static-local/: Cargo.toml
staking-bank-static/staking-bank-static-local/meta/: Cargo.toml
staking-bank-static/staking-bank-static-local/meta/src/: main.rs
staking-bank-static/staking-bank-static-local/output/: staking-bank-static-local.abi.json
staking-bank-static/staking-bank-static-local/src/: lib.rs
staking-bank-static/staking-bank-static-local/wasm/: Cargo.toml
staking-bank-static/staking-bank-static-local/wasm/src/: lib.rs
staking-bank-static/staking-bank-static-prod/: Cargo.toml
staking-bank-static/staking-bank-static-prod/meta/: Cargo.toml
staking-bank-static/staking-bank-static-prod/meta/src/: main.rs
staking-bank-static/staking-bank-static-prod/output/: staking-bank-static-prod.abi.json
staking-bank-static/staking-bank-static-prod/src/: lib.rs
staking-bank-static/staking-bank-static-prod/wasm/: Cargo.toml
staking-bank-static/staking-bank-static-prod/wasm/src/: lib.rs
staking-bank-static/staking-bank-static-sbx/: Cargo.toml
staking-bank-static/staking-bank-static-sbx/wasm/: Cargo.toml
staking-bank-static/staking-bank-static-sbx/wasm/src/: lib.rs
tests/: contract.test.ts  multisig.wasm  timeLock.test.ts
time-lock/: Cargo.toml
time-lock/meta/: Cargo.toml
time-lock/output/: time-lock.abi.json
time-lock/src/: time_lock.rs
time-lock/wasm/: Cargo.toml
umbrella-feeds/: Cargo.toml
umbrella-feeds/meta/: Cargo.toml
umbrella-feeds/meta/src/: main.rs
umbrella-feeds/output/: umbrella-feeds.abi.json
umbrella-feeds/scenarios/: feeds-deploy.scen.json  feeds-update.scen.json
umbrella-feeds/src/: lib.rs  proxy.rs  structs.rs
umbrella-feeds/tests/: umbrella_feeds_test.rs
umbrella-feeds/wasm/: Cargo.toml
umbrella-feeds/wasm/src/: lib.rs
(+25 files in other folders)
