[package]
name = "staking-bank-static-local"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.50.4"

[dependencies.multiversx-sc-modules]
version = "0.50.4"

[dependencies.staking-bank-static-module]
path = "../../common/modules/staking-bank-static-module"

[dev-dependencies.multiversx-sc-scenario]
version = "0.50.4"
