[package]
name = "staking-bank-static-prod"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.41.3"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.41.3"

[dependencies.staking-bank-static-module]
path = "../../common/modules/staking-bank-static-module"

[dev-dependencies.multiversx-sc-scenario]
version = "0.41.3"

[dev-dependencies]
num-bigint = "0.4.2"
