[package]
name = "staking-bank-static-sbx-wasm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.staking-bank-static-sbx]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.3"
